--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql= true
 
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud:3306/test1
-spring.datasource.username=6e3zgplwjzres17vvfha
-spring.datasource.password=pscale_pw_DPkviRXlrvj20W4UF1aAqlb4l5SBput4mfnqZamFfHm
+spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6636349
+spring.datasource.username=sql6636349
+spring.datasource.password=2qp1ev2GRJ
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
