--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql= true
 
-spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6636349
-spring.datasource.username=sql6636349
-spring.datasource.password=2qp1ev2GRJ
+spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud:3306/lab
+spring.datasource.username=ex6zz0amsqkpqe7mustq
+spring.datasource.password=pscale_pw_e9AaCyNkFRer3WE6bqB2lkG40bSr7OE7zBv0L5f2EYG
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
