--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql= true
 
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud:3306/lab
-spring.datasource.username=pk0vy8603gd0iwt9uc0e
-spring.datasource.password=pscale_pw_cMGdoUNpH54evculNiJZutgUM1zzsND8fciWDjhRC7X
+
+spring.datasource.url=jdbc:mysql://root:YaabWYXN1sLu2h9Td9KS@containers-us-west-105.railway.app:6982/railway
+spring.datasource.username=root
+spring.datasource.password=YaabWYXN1sLu2h9Td9KS
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
